# my_deepresearch

./: .gitignore  README.md  main.py  pyproject.toml
agents/: react_agent.py  reporter.py  researcher.py
llm/: llm.py
myDeepResearch/agents/: coder.py  planner.py  react_agent.py  reporter.py
myDeepResearch/llm/: llm.py
myDeepResearch/state_machine/: state_machine.py
myDeepResearch/tools/: crawler.py  tool.py
prompts/: planner_model.py
state_machine/: state_machine.py
