[project]
name = "my-deepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.54.0",
    "jinja2>=3.1.6",
    "markdownify>=1.1.0",
    "numpy>=2.2.6",
    "openai>=1.90.0",
    "pydantic>=2.11.5",
    "readabilipy>=0.3.0",
    "tavily-python>=0.7.8",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
